@@ -1,3 +1,7 @@
+2017-01-30 rryqszq4 <ngxphp@gmail.com>
+	* dev code "ngx_http_php_output.h", "ngx_http_php_output.c"
+	
+
 2016-11-09 rryqszq4 <ngxphp@gmail.com>
 	* fixd ngx_socket_tcp receive complete
 
